# girder-4-pyppeteer-test

./: README.md  RELEASE.md  docs_requirements.txt  execute-test-command.sh  mkdocs.yml  mkdocs_macro.py  pyppeteer.Dockerfile  pyproject.toml  tox.ini
.github/workflows/: build-image.yml  ci.yml  example-integration-tests.yml  test-app-ci.yml  test-app-integration.yml
docs/: debugging.md  github_action.md  index.md  pytest_plugin.md  setup.md  troubleshooting.md
girder-pytest-pyppeteer/: pyproject.toml
girder_pytest_pyppeteer/: plugin.py
test-app/: MANIFEST.in  README.md  docker-compose.override.yml  manage.py  setup.py  tox.ini
test-app/test_app/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
test-app/test_app/core/: apps.py  tasks.py  views.py
test-app/test_app/core/admin/: __init__.py  image.py
test-app/test_app/core/migrations/: 0001_default_site.py  0002_initial_models.py  0003_alter_image_id.py
test-app/test_app/core/models/: image.py
test-app/test_app/core/rest/: __init__.py  image.py  user.py
test-app/test_app/core/tests/: factories.py  test_image.py  test_pyppeteer.py
test-client/: package.json
test-client/src/: App.vue  client.ts  main.ts
test-client/src/components/: ImageList.vue
test-client/src/router/: index.ts
test-client/src/views/: HomePage.vue  ImagesPage.vue  MyImagesPage.vue
