[tool.poetry]
name = "girder-pytest-pyppeteer"
version = "0.0.1"
description = "Pytest plugin for using pyppeteer to test Girder 4 applications"
authors = ["Daniel Chiquito <daniel.chiquito@kitware.com>"]
license = "Apache License 2.0"
classifiers = ["Framework :: Pytest"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.0.1"
# test-app dependencies
celery = {version = "^5.2.3", optional = true}
Django = {version = "^4.0.2", optional = true}
django-allauth = {version = "^0.48.0", optional = true}
django-composed-configuration = {version = ">=0.18", extras = ["dev"], optional = true}
django-configurations = {extras = ["database", "email"], version = "^2.3.2", optional = true}
django-debug-toolbar = {version = "^3.2.4", optional = true}
django-extensions = {version = "^3.1.5", optional = true}
django-filter = {version = "^21.1", optional = true}
django-oauth-toolkit = {version = "^1.7.0", optional = true}
django-s3-file-field = {extras = ["minio"], version = "^0.3.0", optional = true}
djangorestframework = {version = "^3.13.1", optional = true}
drf-yasg = {version = "^1.20.0", optional = true}

[tool.poetry.extras]
test-app = [
    "celery",
    "Django",
    "django-allauth",
    "django-composed-configuration",
    "django-configurations",
    "django-debug-toolbar",
    "django-extensions",
    "django-filter",
    "django-oauth-toolkit",
    "django-s3-file-field",
    "djangorestframework",
    "drf-yasg",
]

[tool.poetry.plugins.pytest11]
pyppeteer = "girder_pytest_pyppeteer.plugin"

[tool.poetry.plugins.console_scripts]
pytest-docker = "girder_pytest_pyppeteer.main:run_pytest_docker_compose"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
